samples/_failures_safe/1761799708_354f35_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_18ebe2f4.c: In function ‘main’:
./samples/SAFE/__tmp_18ebe2f4.c:160:9: error: expected expression at end of input
  160 |         skip_whitespace(input, &pos, &line,
      |         ^~~~~~~~~~~~~~~
./samples/SAFE/__tmp_18ebe2f4.c:160:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_18ebe2f4.c:160:9: error: expected declaration or statement at end of input
